feat: page transitions

--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,18 @@
     font-family: Lato, sans-serif;
   }
 }
+
+.fade-enter,
+.fade-exit-active {
+  opacity: 0;
+}
+
+.fade-exit,
+.fade-enter-active {
+  opacity: 1;
+}
+
+.fade-enter-active,
+.fade-exit-active {
+  transition: opacity 300ms ease-in;
+}
